# whisper.cpp

./: run.sh
examples/server/: CMakeLists.txt  README.md  server.cpp  websocket_handler.cpp  websocket_handler.h
examples/server/public/: index.html  websocket.html
